footer style tweaks

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
     </div>
     </div>
     <div class="footer">
-      <div class="left">
-        <a href="#">Advertising</a>
-        <a href="#">Business</a>
-        <a href="#">About</a>
-      </div>
-      <div class="right">
-        <a href="#">Privacy
-        <a href="#">Terms</a>
-        <a href="#">Settings</a>
-      </div>
+      <span id="left">
+        <a href="#" class="flink">Advertising</a>
+        <a href="#" class="flink">Business</a>
+        <a href="#" class="flink">About</a>
+      </span>
+      <span id="right">
+        <a href="#" class="flink">Privacy
+        <a href="#" class="flink">Terms</a>
+        <a href="#" class="flink">Settings</a>
+      </span>
     </div>
   </body>
 </html>
