add grid and bell in nav

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
   <head>
     <title>Google</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://use.fontawesome.com/1d55e3e5ea.js"></script>
   </head>
   <body>
     <div class="page-wrapper">
     <nav class="nav">
       <ul>
         <li><a href="#"><img class="circle" src="https://lh6.googleusercontent.com/-_9HeiZu91nk/AAAAAAAAAAI/AAAAAAAAEV0/P17SE8RIBs8/s72-c-k-no/photo.jpg" /></a></li>
-        <li><a href="#">grid</a></li>
-        <li><a href="#">bell</a></li>
+        <li><a href="#"><i class="fa fa-bell"></i></a></li>
+        <li><a href="#"><image src="grid.png"></a></li>
         <li><a href="#">Images</a></li>
         <li><a href="#">Mail</a></li>
       </ul>
